assets/css/amp-editor-story-blocks.css
div[data-type="amp/amp-story-page"] {
	border: 1px solid #ffdddd;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"] {
	padding: 0;
	margin: 60px auto 0;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"] .components-placeholder.wp-block-image {
	background: #dcdcdc;
}

@media (min-width: 600px) {
	div[data-type="amp/amp-story-page"] .editor-block-list__block {
		margin: 0;
		padding: 0;
	}
}

.components-popover.editor-inserter__amp .components-popover__content {
	height: 200px;
}

.editor-inserter__popover .amp-story-has-cta-layer .editor-block-list-item-amp-amp-story-cta-layer {
	opacity: 0.5;
}

div[data-type="amp/amp-story-page"],
div[data-type="amp/amp-story-page"] .editor-inner-blocks .editor-block-list__layout:first-of-type {
	margin: auto;
	width: 320px !important;
	height: 533px !important;
}

.editor-block-list__layout div[data-type="amp/amp-story-cta-layer"] .editor-inner-blocks .editor-block-list__layout {
	min-height: initial !important;
}

/* Make layer be exactly on top of each other */
.editor-block-list__layout div[data-type="amp/amp-story-page"].editor-block-list__block:first-child .editor-block-list__block-edit {
	margin: 0;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"].editor-block-list__block .editor-block-list__block-edit,
.editor-block-list__layout .editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit {
	margin: 0;
}

div[data-type="amp/amp-story-page"] .editor-inner-blocks .editor-block-list__layout .editor-block-list__layout {
	background-color: initial;
}

.editor-block-list__layout div[data-amp-type="grid"] {
	position: absolute;
	height: 100%;
	width: 100%;
}

.amp-grid-template .editor-block-list__layout:first-of-type {
	display: grid;
	padding: 68px 32px 32px;
}

.amp-grid-template .editor-block-list__layout:first-of-type *:not(.editor-block-toolbar) {
	box-sizing: border-box;
}

.amp-grid-template-horizontal .editor-block-list__layout:first-of-type {
	grid-auto-flow: column !important;
	grid-template-rows: 100% !important;
	-ms-flex-line-pack: stretch;
	align-content: stretch;
	-webkit-box-align: start;
	-ms-flex-align: start;
	align-items: start;
	grid-gap: 16px;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: start;
}

.amp-grid-template-vertical .editor-block-list__layout:first-of-type {
	grid-auto-flow: row;
	grid-template-columns: 100%;
	align-content: start;
	grid-gap: 16px;
	-webkit-box-pack: stretch;
	-ms-flex-pack: stretch;
	justify-content: stretch;
	justify-items: start;
}

.amp-grid-template-vertical .editor-block-list__block {
	width: 100%;
}

.amp-grid-template-thirds .editor-block-list__layout:first-of-type {
	grid-template-rows: 1fr 1fr 1fr;
	grid-template-areas: "upper-third" "middle-third" "lower-third";
}

div[data-amp-position="upper-third"] {
	grid-area: upper-third / lower-third / lower-third / lower-third;
}

div[data-amp-position="middle-third"] {
	grid-area: middle-third / lower-third / lower-third / lower-third;
}

div[data-amp-position="lower-third"] {
	grid-area: lower-third / lower-third / lower-third / lower-third;
}


.amp-grid-template-fill .editor-block-list__layout > :first-child {
	bottom: 0;
	display: block;
	height: auto;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	width: auto;
	display: flex;
}

.amp-grid-template-fill .editor-block-list__block-edit {
	display: flex;
	flex-direction: column;
}

.amp-grid-template-fill .editor-block-list__block-edit > div:last-child {
	display: flex;
	flex: 1;
}

.amp-grid-template-fill .components-resizable-box__container {
	width: 318px;
	height: 533px;
}

.amp-grid-template-fill .components-disabled {
	width: 318px;
	max-height: 533px;
	overflow: hidden;
}

.amp-grid-template-fill .wp-block-image,
.amp-grid-template-fill .wp-block-video {
	margin-top: 0;
	margin-bottom: 0;
}

.amp-grid-template-fill .components-resizable-box__container img {
	object-fit: cover;
	width: 318px !important;
	height: 533px !important;
	max-height: 75vh !important;
	max-width: 45vh !important;
}

.amp-grid-template-fill > :not(:first-child) {
	display: none;
}

.editor-block-list__layout div[data-type="amp/amp-story-cta-layer"] {
	position: absolute;
	height: 20%;
	width: 100%;
	bottom: 0;
}

.editor-block-list__layout > div {
	transition: .3s;
	transition-property: opacity, filter;
}

div[data-amp-type="grid"] .block-library-image__resizer {
	max-width: 318px !important;
	max-height: 533px !important;
}

.editor-block-list__layout div[data-amp-type="grid"].is-selected,
.editor-block-list__layout div[data-amp-type="grid"].is-selected .editor-block-list__block {
	outline: 1px dotted #99c2e0;
}

.editor-block-list__layout div[data-amp-type="grid"]:not(.is-selected):not(.is-selected-parent) .editor-block-list__block {
	z-index: 0;
}

.editor-block-list__layout div[data-amp-type="grid"]:not(.is-selected):not(.is-selected-parent) .editor-block-list__block p[data-is-placeholder-visible="true"] ~ p {
	display: none;
}

.editor-block-list__layout div[data-amp-type="grid"].is-selected ~ div[data-amp-type="grid"],
.editor-block-list__layout div[data-amp-type="grid"].is-selected-parent ~ div[data-amp-type="grid"],
.editor-block-list__layout div[data-amp-type="grid"].is-selected ~ div[data-amp-type="grid"],
.editor-block-list__layout div[data-amp-type="grid"].is-selected-parent ~ div[data-type="amp/amp-story-cta-layer"]{
	display: none;
}

div[data-type="amp/amp-story-page"] > div > div > .is-selected-parent > .editor-inner-blocks > .editor-block-list__layout > .is-selected ~ div {
	opacity: 0.5;
	filter: blur(8px);
	-webkit-filter: blur(8px);
}

div[data-type="amp/amp-story-page"] > div > div > .is-selected-parent > .editor-inner-blocks > .editor-block-list__layout > .is-selected {
	opacity: 1;
	background: #fff;
	filter: none;
	-webkit-filter: none;
}

.edit-post-visual-editor .editor-block-list__block ul.editor-selectors {
	position: absolute;
	right: -155px;
	bottom: 0;
	width: 120px;
	z-index: 80;
	list-style-type: none;
	padding: 0;
	margin: 0;
}

.editor-selectors .component-editor__selector button {
	background: no-repeat left top;
	padding-left: 37px;
	height: 40px;
	margin: 1px 0 1px 4px;
}

.editor-selectors .component-editor__selector .components-button:focus {
	box-shadow: none;
}

.editor-selectors .component-editor__selector.template-fill button {
	background-image: url( '../images/grid-fill-inactive.svg' );
}

.editor-selectors .component-editor__selector.template-fill.is-selected button {
	background-image: url( '../images/grid-fill-active.svg' );
}

.editor-selectors .component-editor__selector.template-horizontal button {
	background-image: url( '../images/grid-horizontal-inactive.svg' );
}

.editor-selectors .component-editor__selector.template-horizontal.is-selected button {
	background-image: url( '../images/grid-horizontal-active.svg' );
}

.editor-selectors .component-editor__selector.template-vertical button {
	background-image: url( '../images/grid-vertical-inactive.svg' );
}

.editor-selectors .component-editor__selector.template-vertical.is-selected button {
	background-image: url( '../images/grid-vertical-active.svg' );
}

.editor-selectors .component-editor__selector.template-thirds button {
	background-image: url( '../images/grid-thirds-inactive.svg' );
}

.editor-selectors .component-editor__selector.template-thirds.is-selected button {
	background-image: url( '../images/grid-thirds-active.svg' );
}

.editor-selectors .component-editor__selector.page-selector button {
	background-image: url( '../images/page-inactive.svg' );
}

.editor-selectors .component-editor__selector.page-selector.is-selected button {
	background-image: url( '../images/page-active.svg' );
}

.editor-selectors .component-editor__selector button {
	cursor: pointer;
}

.post-type-amp_story .components-range-control__number {
	width: 60px;
}

